# Simple-3D-Reconstruction

./: .gitignore  CMakeLists.txt  MacOSXBundleInfo.plist.in  README.md  main.cpp
glsl/: fs_points.glsl  vs_points.glsl
include/: pch.h
include/app/: application.h  glfw.h  imgui.h  imgui_window.h  my_application.h
include/component/: dense_point_cloud_operate_window.h  output_file_window.h  ply_viewer_mesh_texture_window.h  ply_viewer_mesh_window.h  ply_viewer_point_window.h  refine_mesh_operate_window.h  rough_mesh_operate_window.h  sparse_point_cloud_input_list_window.h  sparse_point_cloud_operate_window.h  texture_mesh_operate_window.h  usage_selector_window.h  workspace_window.h
include/element/: camera.h
include/file/: base.h  camera_parameter.h  image.h  mvs.h  ply.h
include/process/: base.h  calibration.h  mvs.h  sfm.h
include/render/: frame_buffer.h  program.h  render_buffer.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h
include/ui/: calibration_window.h  camera_window.h  dense_point_cloud_window.h  icon_library.h  log_window.h  main_window.h  output_file_window.h  scene_view.h  scene_view_mesh.h  scene_view_mesh_texture.h  scene_view_point.h  sparse_point_cloud_window.h  usage_selector_window.h  widget.h  workspace_window.h
include/util/: camera_parameter.h  child_process.h  file_util.h  image.h  image_util.h  my_usb_camera.h  ply.h  singleton.h  usb_camera.h  utils.h  workspace_file_system.h
include/view/: dense_point_cloud.h  refine_mesh.h  rough_mesh.h  sparse_point_cloud.h  texture_mesh.h
resource/glsl/: mesh_texture.frag  points.frag  points.vert  points_color.frag  points_color.vert
src/: main.cpp
src/app/: application.cpp  my_application.cpp
src/component/: dense_point_cloud_operate_window.cpp  output_file_window.cpp  ply_viewer_mesh_texture_window.cpp  ply_viewer_mesh_window.cpp  ply_viewer_point_window.cpp  refine_mesh_operate_window.cpp  rough_mesh_operate_window.cpp  sparse_point_cloud_input_list_window.cpp  sparse_point_cloud_operate_window.cpp  texture_mesh_operate_window.cpp  usage_selector_window.cpp  workspace_window.cpp
src/element/: camera.cpp
src/file/: base.cpp  camera_parameter.cpp  image.cpp  mvs.cpp  ply.cpp
src/process/: base.cpp  calibration.cpp  mvs.cpp  sfm.cpp
src/render/: frame_buffer.cpp  program.cpp  render_buffer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
src/ui/: calibration_window.cpp  camera_window.cpp  dense_point_cloud_window.cpp  log_window.cpp  main_window.cpp  output_file_window.cpp  scene_view.cpp  scene_view_mesh.cpp  scene_view_mesh_texture.cpp  scene_view_point.cpp  sparse_point_cloud_window.cpp  usage_selector_window.cpp  widget.cpp  workspace_window.cpp
src/util/: camera_parameter.cpp  child_process.cpp  file_util.cpp  image.cpp  image_util.cpp  my_usb_camera.cpp  ply.cpp  usb_camera.cpp  utils.cpp  workspace_file_system.cpp
src/view/: dense_point_cloud.cpp  refine_mesh.cpp  rough_mesh.cpp  sparse_point_cloud.cpp  texture_mesh.cpp
